[package]
name = "tokio"
version = "1.28.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

full = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

fs = ["real_tokio/fs"]
io-util = ["real_tokio/io-util"]
io-std = ["real_tokio/io-std"]
macros = ["real_tokio/macros"]
net = ["real_tokio/net"]
parking_lot = ["real_tokio/parking_lot"]
process = ["real_tokio/process"]
rt = ["real_tokio/rt"]
rt-multi-thread = ["real_tokio/rt-multi-thread"]
signal = ["real_tokio/signal"]
sync = ["real_tokio/sync"]
time = ["real_tokio/time"]
test-util = ["real_tokio/test-util"]
tracing = ["real_tokio/tracing"]
bytes = ["real_tokio/bytes"]
libc = ["real_tokio/libc"]
memchr = ["real_tokio/memchr"]
mio = ["real_tokio/mio"]
num_cpus = ["real_tokio/num_cpus"]
signal-hook-registry = ["real_tokio/signal-hook-registry"]
socket2 = ["real_tokio/socket2"]
stats = ["real_tokio/stats"]
tokio-macros = ["real_tokio/tokio-macros"]

[target.'cfg(msim)'.dependencies]
msim = { version = "0.1.0", path = "../msim" }

[dependencies]
tracing = "0.1"

real_tokio = { git = "https://github.com/mango-developer/tokio-madsim.git", rev = "aaceb896cad2808e5f09d420c3c3f760f6ae3885", package = "real_tokio", features = ["full"] }
bytes = { version = "1.1" }
futures = { version = "0.3.0", features = ["async-await"] }
mio = { version = "0.8.1" }
