[package]
name = "msim"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "rpc"]
rpc = ["bincode"]
macros = ["msim-macros", "tokio/macros"]

[dependencies]
bincode = { version = "1", optional = true }
bytes = "1"
futures = "0.3"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
msim-macros = { version = "0.1.0", path = "../msim-macros", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
pin-project-lite = "0.2"
tap = "1"

[build-dependencies]
cc = { version = "1.0" }

[target.'cfg(msim)'.dependencies]
ahash = "0.7"
downcast-rs = "1.2"
libc = "0.2"
naive-timer = "0.2"
tokio = { git = "https://github.com/mango-developer/tokio-madsim.git", rev = "aaceb896cad2808e5f09d420c3c3f760f6ae3885", package = "real_tokio", features = ["full"] }
tokio-util = { git = "https://github.com/mango-developer/tokio-madsim.git", rev = "aaceb896cad2808e5f09d420c3c3f760f6ae3885", features = ["full"] }
toml = "0.5"
socket2 = "0.4"
erasable = "1.2"

# TODO: revert back to the crates-io version after https://github.com/smol-rs/async-task/pull/34 merges
async-task = { git = "https://github.com/mango-developer/async-task.git", rev = "ef6049010dc76979c58f4f4ef22a774c693dcccd" }

[dev-dependencies]
criterion = "0.3"
structopt = "0.3"
tokio = { git = "https://github.com/mango-developer/tokio-madsim.git", rev = "aaceb896cad2808e5f09d420c3c3f760f6ae3885", package = "real_tokio", features = ["full"] }

[[bench]]
name = "rpc"
harness = false

[package.metadata.docs.rs]
# all-features = true
rustc-args = ["--cfg", "msim"]
rustdoc-args = ["--cfg", "msim", "--cfg", "docsrs"]
